# Projeto_BusFlowRP

./: .env  README.md  malha_horaria_completa_rp.csv  pyproject.toml  requirements.txt  resposta_real.json
.streamlit/: secrets.toml
data/processed/: horarios_linha.csv
data/raw/: lista_mestre_linhas.json
src/dashboard/: app.py
src/database/: connection.py
src/pipeline/: analise_json.py  extrair_horarios.py  extrator_massa_busflow.py  listar_linhas.py
src/scripts/: capturar_rota_real.py  carga_itinerario_real.py  carga_itinerarios_em_massa.py  gerar_itinerarios.py  ingestao_csv_para_postgres.py  simulador_gps.py
utils/: analise_json.py  extrator_massa_busflow.py
