[project]
name = "projeto-busflowrp"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Henrique",email = "eduardo.hnsantos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "streamlit (>=1.57.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
