[project]
name = "projeto-busflowrp"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Henrique",email = "eduardo.hnsantos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "ruff (>=0.15.14,<0.16.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
